lab1/Test/L1-A-13-65.output
Error Type B at Line 6
Error Type B at Line 20
Error Type B at Line 26
Error Type A at Line 31
Error Type A at Line 32
Error Type A at Line 44
Error Type A at Line 47
