lab1/Test/L1-A-13-65.cmm
int INsgjrt2aVqX ( int Lbgx6oQ , struct bT2SOIpz z6UbStWTgbgPdN0a 
  [ 977163564 ] ) {
  float n_FnWLVcYqyLeGn7MaqF = vpWuEDE0x == _x15 + 
    AreJ / - _BbZlRpuI ( efmFi , Xv = AdxMvyMqiqK || ugi6AwYxf 
    && stRBZfrpTSyIteQ > lt5CaneG9Fjjd67 * VWgem [ Mv8n5Wcryac_wdb 
    <= / - ( pm4W_ip = BdTIjDHhCj7dW4jCEAVg = C4At4sstQ3kxGc6OD 
    = PWmc = xhRM != c5UUEU2s0K >= ! ! ! YZz3hPKMw_e_yQys1RxJ 
    && - rKIM7r6e7RMQpoRmX ) . RKq . c4DFDJM1G2nMM * - 
    925975630.831832305 . xPLnNmxQsxi < 110075308 ] - 
    ! - S4m ( ) ) ;
}
struct uaYTXo {
}_o16IEW , i1jhZ6PfmEKcD 

;
int ;
int ;
int ;
int 
int ;
struct {
};
struct gK0iSBnqBDi ;
int ;
struct woYGgJrCCPS_Tf ;
float int SUEhlBNFsHCO ( ) {
  if ( p3mnvWJaG1 )   if ( DX6 )   HOKcl84v7YalbQwA 
    ;
else   ggH4 ;

else   if ( d6LhGvf1lT )   if ( Said5QR ) ~  while 
    $( h4U2NYXQenBovlu )   awrM1eNJzWGdVVBeU7 ;




}
int u9KoinEYYE6got ( ) {
  {
    int H0qnrqyHQq1fr ;
    int mpF5 ;
    int d_26IHD821EhvT ;
    int WbIhnYil , S3UrVIYS ;
    if ( $idMsCwRmD2vfCJP0XyF7 )     return N2ppgbf0FLxTGg6l_tWo 
      ;

  }'
}
int ;
struct {
};
